--- a/wp-content/themes/sesco-dss/sass/layouts/_section.scss
+++ b/wp-content/themes/sesco-dss/sass/layouts/_section.scss
@@ -1,3 +1,7 @@
+#page {
+  @include position(relative);
+}
+
 #primary {
   width: 100%;
   padding-top: 100px;
